Adjusted scrollbars to fit the Qt theme

--- a/Breeze-gtk/gtk-3.20/gtk.css
+++ b/Breeze-gtk/gtk-3.20/gtk.css
@@ -3125,13 +3125,15 @@ scale highlight {
 scrollbar {
   -GtkScrollbar-has-backward-stepper: false;
   -GtkScrollbar-has-forward-stepper: false;
-  background-color: #eff0f1;
+  background-color: transparent;
   border-width: 0px 0px;
-  border-color: #eff0f1;
+  border-color: transparent;
   margin: 0px; }
+scrollbar:hover {
+    background-color: #fcfcfc; }
   scrollbar button {
-    min-width: 5px;
-    min-height: 5px;
+    min-width: 2px;
+    min-height: 2px;
     margin: 0px;
     padding: 0px 0px;
     border: none;
@@ -3143,16 +3145,16 @@ scrollbar {
     scrollbar button:hover {
       border: none;
       background-image: none;
-      background-color: #eff0f1;
+      background-color: #fcfcfc;
       color: transparent; }
     scrollbar button:active, scrollbar button:active:hover {
       border: none;
       background-image: none;
-      background-color: #eff0f1;
+      background-color: #fcfcfc;
       color: transparent; }
     scrollbar button:disabled {
       border: none;
-      background-color: #eff0f1;
+      background-color: #fcfcfc;
       background-image: none;
       color: transparent; }
     scrollbar button:backdrop {
@@ -3168,7 +3170,7 @@ scrollbar {
     -GtkScrollbar-has-forward-stepper: false;
     background: none; }
     scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider {
-      min-width: 6px;
+      min-width: 3px;
       border-radius: 8px;
       background-color: rgba(116,119,123,0.8); }
       scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider:backdrop {
@@ -3178,22 +3180,25 @@ scrollbar {
       scrollbar:hover trough{
     background:linear-gradient(transparent 0,transparent 5px,#b6b8ba 5px,#b6b8ba calc(100%-5px), transparent calc(100%-5px),transparent 100%);     }
   scrollbar trough {
-      transition-duration:0.1s;
-    min-width: 6px;
-    min-height: 14px;
-    border: 0px solid #eff0f1;
+    transition-duration: 0.1s;
+    transition-property: background-color;
+    min-width: 3px;
+    min-height: 13px;
+    border: 0px solid transparent;
     border-radius: 8px;
-    background-color: #eff0f1;
+    background-color: transparent;
     background-clip: padding-box;
-    box-shadow: inset 0px 0px 0px 5px #eff0f1;}
+    box-shadow: inset 0px 0px 0px 3px transparent;}
+  scrollbar:hover trough {
+    box-shadow: inset 0px 0px 0px 3px #fcfcfc; }
   scrollbar slider {
     transition-duration:0.1s;
-    min-width: 6px;
+    min-width: 3px;
     min-height: 30px;
-    border: 5px solid transparent;
+    border: 3px solid transparent;
     border-radius: 8px;
     background-clip: padding-box;
-    background-color: #3daee9; }
+    background-color: #787b7f; }
     scrollbar slider:hover {
       background-color: #93cee9; }
     scrollbar:backdrop slider:backdrop {
@@ -3202,7 +3207,7 @@ scrollbar {
       background-color: rgba(105, 108, 112, 0.35); }
   scrollbar.horizontal slider {
     min-width: 30px;
-    min-height: 6px; }
+    min-height: 3px; }
 
 /***********
  * Sidebar *
